--- a/test/styles.css
+++ b/test/styles.css
@@ -1,31 +1,4 @@
-body {
-  --primary: #631d76;
-  --secondary: #9e4770;
-  --white: #fbfbfb;
-  --dark: #2e2532;
-  --black: #201a23;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-size: 10px;
-}
-/* cart icon in BTN */
-.fa,
-.fas {
-  margin-right: 5px;
-}
-.wrapper {
-  margin: 5%;
-}
-.products__container,
-.product__item {
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
-    0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
-}
-/* header */
-
-/* items section */
-@media screen and (min-width: 359px) {
+@media only screen and (min-width: 359px) {
   .products__container {
     display: flex;
     flex-direction: column;
@@ -38,6 +11,7 @@ body {
     height: 100%;
     flex-direction: column;
     margin-bottom: 5%;
+    border: 1px solid red;
   }
   .product__image {
     width: 100%;
@@ -55,7 +29,7 @@ body {
     bottom: 0px;
   }
 }
-@media screen and (min-width: 359px) and (orientation: landscape) {
+@media only screen and (min-width: 359px) and (orientation: landscape) {
   .products__container {
     display: flex;
     flex-direction: row;
@@ -66,96 +40,60 @@ body {
     position: relative;
     margin: auto;
     display: flex;
-    width: 22%;
+    width: 30%;
     flex-direction: column;
     margin: 1%;
+    border: 1px solid rgb(13, 0, 255);
   }
   .product__image {
     width: 100%;
-    height: 200px;
   }
   .product__title {
     margin-left: 5px;
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
   .product__btn {
     border: 1px solid gray;
     padding: 1px 12px;
-    font-size: 0.5rem;
-    position: absolute;
-    right: 0px;
-    bottom: 0px;
-  }
-}
-@media screen and (min-width: 900px) and (orientation: landscape) {
-  .products__container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: row;
-    padding: 1%;
-    flex-wrap: wrap;
-    margin: auto;
-  }
-  .product__item {
-    position: relative;
-    display: flex;
-    width: 22%;
-    flex-direction: column;
-    margin: auto;
-    margin-bottom: 1%;
-  }
-  .product__image {
-    width: 100%;
-    height: 100%;
-  }
-  .product__title {
-    margin-left: 5px;
-    font-size: 1.2rem;
-  }
-  .product__btn {
-    border: 1px solid gray;
-    padding: 2px 12px;
-    font-size: 1.2rem;
-    position: absolute;
-    right: 0px;
-    bottom: 0px;
-  }
-}
-@media screen and (min-width: 1366px) {
-  .products__container {
-    display: flex;
-    width: 100%;
-    height: 80%;
-    flex-direction: row;
-    padding: 1%;
-    flex-wrap: wrap;
-    margin: auto;
-  }
-  .product__item {
-    position: relative;
-    display: flex;
-    width: 15%;
-    flex-direction: column;
-    margin: auto;
-    margin-bottom: 1%;
-  }
-  .product__image {
-    width: 100%;
-    height: 100%;
-  }
-  .product__title {
-    margin-left: 5px;
-    font-size: 1.2rem;
-  }
-  .product__btn {
-    border: 1px solid gray;
-    padding: 2px 12px;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
     position: absolute;
     right: 0px;
     bottom: 0px;
   }
 }
 
-/*  */
+@media only screen and (min-width: 1024px) {
+  .products__container {
+    display: flex;
+    width: 90%;
+    flex-direction: row;
+    padding: 1%;
+    flex-wrap: wrap;
+    margin: auto;
+    border: 1px solid red;
+  }
+  .product__item {
+    position: relative;
+    display: flex;
+    width: 25%;
+    flex-direction: column;
+    margin: auto;
+    margin-bottom: 1%;
+    border: 1px solid red;
+  }
+  .product__image {
+    width: 100%;
+  }
+  .product__title {
+    margin-left: 5px;
+    font-size: 1.2rem;
+  }
+  .product__btn {
+    border: 1px solid gray;
+    padding: 2px 12px;
+    font-size: 1.2rem;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+  }
+}
