--- a/backend/public/css/main.css
+++ b/backend/public/css/main.css
@@ -9,22 +9,78 @@ body {
   box-sizing: border-box;
   font-size: 10px;
 }
-/* cart icon in BTN */
-.fa,
-.fas {
-  margin-right: 5px;
-}
-.wrapper {
-  margin: 5%;
-}
 .products__container,
 .product__item {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
     0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
 }
 /* header */
-
+@media screen and (min-width: 359px) {
+  .header {
+    width: 92%;
+    padding: 10px;
+    font-family: "Big Shoulders Display";
+    color: var(--black);
+    display: flex;
+    border-bottom: 1px solid var(--black);
+    font-size: 12px;
+  }
+  .header__logo {
+    display: none;
+    margin-top: 20px;
+    height: 20px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+      0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  }
+  .header__adminPanel {
+    margin-left: 15px;
+    flex-grow: 2;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+      0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  }
+  .header__signIn,
+  .header__signiUp {
+    margin-left: 5px;
+    cursor: pointer;
+    padding: 1px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+      0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+    letter-spacing: 3px;
+    text-decoration: none;
+    color: var(--black);
+    font-weight: 700;
+  }
+  .cart__container {
+    flex-grow: 1;
+    padding: 10px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+      0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  }
+  .cart__container > p {
+    letter-spacing: 3px;
+    color: var(--black);
+    font-weight: 700;
+  }
+}
+@media screen and (min-width: 359px) and (orientation: landscape) {
+  .header__logo {
+    display: block;
+  }
+}
 /* items section */
+/* button add to cart styles */
+.product__btn {
+  transition: 1s;
+}
+.product__btn:hover {
+  transition: 1s;
+  cursor: pointer;
+  color: var(--white);
+  background-color: var(--black);
+}
 @media screen and (min-width: 359px) {
   .products__container {
     display: flex;
@@ -157,5 +213,13 @@ body {
     bottom: 0px;
   }
 }
-
-/*  */
+/* footer  */
+@media screen and (min-width: 359px) {
+  .footer {
+    margin-top: 15px;
+    height: 5%;
+  }
+  .footer__copyright {
+    text-align: center;
+  }
+}
